# cot-deception-eval

./: .gitignore  README.md  ascii.py  assistant.py  data.py  eval.py  main.py  monitor.py  pyproject.toml  structured_output.py
