[project]
name = "cot-faithfulness"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argparse>=1.4.0",
    "datetime>=5.5",
    "dotenv>=0.9.9",
    "openai>=1.93.0",
    "python-dotenv[cli]>=1.1.1",
    "tqdm>=4.67.1",
]
